DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Oct-26-2005 patrickh    gadget::MouseEvent objects on Windows now have correct
                        key press state information.
                        Submitted by: Juan Hernando

[1.0.1 released - 8.29.2005]===================================================
Aug-29-2005 patrickh    NEW VERSION: 1.0.1
Aug-17-2005 patrickh    Recognize mouse scroll wheel events and treat them as
            allenb      button press/release events for mouse buttons 4 and 5.

[1.0.0 released - 7.5.2005]====================================================
Jul-07-2005 patrickh    NEW VERSION: 1.0.0
Jun-15-2005 patrickh    Updated to support Windows 64-bit edition.
                        NEW VERSION: 0.93.1

[1.0 Beta 3 released - 6.7.2005]===============================================
Jun-07-2005 patrickh    NEW VERSION: 0.93.0
Apr-08-2005 patrickh    Fixed a bug in the IntersenseAPI analog/digital unit
                        sequencing that resulted in configuration complications
                        and wasted sample buffers.
Mar-07-2005 patrickh    Renamed gadget::Proxy::isStupified() to
                        gadget::Proxy::isStupefied() and
                        gadget::Proxy::stupify() to gadget::Proxy::stupefy().
                        NEW VERSION: 0.92.1

[1.0 Beta 2 released - 1.18.2005]==============================================
Jan-18-2005 patrickh    NEW VERSION: 0.92.0

[1.0 Beta 1 released - 12.24.2004]=============================================
Dec-23-2004 patrickh    NEW VERSION: 0.91.0
Dec-21-2004 aronb       Refactored event input to allow more code reuse and
                        flexibility. As an effect EventWindow and
                        EventWindowProxy were renamed to KeyboardMouse and
                        KeyboardMouseProxy respectively.
                        NEW VERSION 0.22.0