@@ -44,7 +44,7 @@ AC_COPYRIGHT([VR Juggler is (C) Copyright 1998-2005 by Iowa State University])
 AC_CONFIG_SRCDIR([Makefile.in])
 AC_REVISION($Revision$)
 AC_CONFIG_AUX_DIR([../../../share/config])
-DPP_PREREQ([1.5.1])
+DPP_PREREQ([2.1.2])
 DPP_INIT
 
 # -----------------------------------------------------------------------------
@@ -164,8 +164,8 @@ DPP_PROG_LINKER
 # Checks for libraries.
 # -----------------------------------------------------------------------------
 
-VPR_PATH([0.40], , [AC_MSG_ERROR([*** VPR required for Device Drivers ***])])
-GADGETEER_PATH([0.15], ,
+VPR_PATH([1.0.1], , [AC_MSG_ERROR([*** VPR required for Device Drivers ***])])
+GADGETEER_PATH([1.0.1], ,
                [AC_MSG_ERROR(*** Gadgeteer required for Device Drivers ***)])
 
 # TODO: Add this back in.
@@ -366,7 +366,11 @@ if test "x${_with_vrpn}" != "xno" ; then
    elif test "x$PLATFORM" = "xAIX" ; then
       VRPNLIBDIR='powerpc_aix'
    elif test "x$PLATFORM" = "xDarwin" ; then
-      VRPNLIBDIR='powerpc_macosx'
+      if test "x$ISA" = "xuniversal" ; then
+         VRPNLIBDIR='universal_macosx'
+      else
+         VRPNLIBDIR='powerpc_macosx'
+      fi
    elif test "x$PLATFORM" = "xSolaris" ; then
       case $target_cpu in
          *86)
