@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jul-08-2006 patrick     Added support for building universal binaries on Mac
+                        OS X.
 Oct-26-2005 patrickh    gadget::MouseEvent objects on Windows now have correct
                         key press state information.
                         Submitted by: Juan Hernando
